# manufacturing-intelligence-platform

./: .env.example  .gitattributes  .gitignore  INSIGHTS.md  Makefile  README.md  docker-compose.yml  pyproject.toml  tasks.ps1
.github/workflows/: ci.yml
backend/: __init__.py  requirements.txt
backend/app/: cache.py  config.py  db.py  logging_config.py  main.py  schemas.py
backend/app/routers/: exec.py  kpi.py  methodology.py  quality.py  reliability.py  shifts.py  trends.py
db/: analytical_views.sql  load_data.py  schema.sql
deploy/: RUNBOOK.md  drop-manufacturing-db.sh  factory-api.service  factory-web.service  finish-api-install.sh  nginx.conf
docs/: schema.md
docs/superpowers/plans/: 2026-06-27-senior-level-overhaul.md
docs/superpowers/specs/: 2026-06-27-senior-level-overhaul-design.md
frontend/: next.config.js  package-lock.json  package.json  tailwind.config.ts  vitest.config.ts  vitest.setup.ts
frontend/app/: globals.css  layout.tsx  page.test.tsx  page.tsx
frontend/components/: Card.tsx  Charts.tsx  KpiCards.tsx  Oee.tsx  Sections.tsx  Skeleton.tsx  ThemeToggle.tsx
frontend/lib/: api.ts  derive.test.ts  derive.ts  theme.ts  useTheme.ts
generator/: generate_factory_data.py
tests/: conftest.py  test_api_contracts.py  test_cache.py  test_foreign_keys.py  test_generator_helpers.py  test_generator_reproducibility.py  test_row_counts.py  test_validation_endpoint.py
