[project]
name = "manufacturing-intelligence-platform"
version = "1.0.0"
description = "Automotive Assembly Intelligence — synthetic manufacturing analytics platform."
requires-python = ">=3.12"

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = ["frontend", "**/output", "**/.next"]

[tool.ruff.lint]
# E/F: pyflakes+pycodestyle, I: isort, UP: pyupgrade, B: bugbear
select = ["E", "F", "I", "UP", "B"]
# Long SQL strings and the generated-data tables are intentionally wide.
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "db: test requires a live PostgreSQL (set DATABASE_URL)",
]
